--- a/index.html
+++ b/index.html
@@ -26,127 +26,127 @@
         <section class="ChallengeContainer">
 
             <div class="Challenge" id="Expanding">
-                <a href="./01 Expanding_cards/index.html">Expanding cards</a>
+                <a href="./01 Expanding_cards/Expanding.html">Expanding cards</a>
                 <img src="./img/01.png" alt=""/>
             </div>
 
             <div class="Challenge">
-                <a href="./02 Porgress steps/index.html">Progress steps</a>
+                <a href="./02 Porgress steps/Progress.html">Progress steps</a>
                 <img src="./img/02.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./03 Rotating Navigation/index.html">Rotating navigation</a>
+                <a href="./03 Rotating Navigation/Rotating.html">Rotating navigation</a>
                 <img src="./img/03.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./04 hidden search/index.html">Hidden search</a>
+                <a href="./04 hidden search/Hidden.html">Hidden search</a>
                 <img src="./img/04.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./05 Blurry Loading/index.html">Blurry Loading</a>
+                <a href="./05 Blurry Loading/Blurry.html">Blurry Loading</a>
                 <img src="./img/05.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./06 Drag and drop/index.html">Drag and drop</a>
+                <a href="./06 Drag and drop/Drag.html">Drag and drop</a>
                 <img src="./img/06.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./07 Auto text/index.html">Auto text</a>
+                <a href="./07 Auto text/Auto.html">Auto text</a>
                 <img src="./img/07.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./08 Hoverboard/index.html">Hoverboard</a>
+                <a href="./08 Hoverboard/Hoverboard.html">Hoverboard</a>
                 <img src="./img/08.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./09 Scroll Animation/index.html">Scroll animation</a>
+                <a href="./09 Scroll Animation/Scroll.html">Scroll animation</a>
                 <img src="./img/09.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./10 Form input wave/index.html">Form input wave</a>
+                <a href="./10 Form input wave/Form.html">Form input wave</a>
                 <img src="./img/10.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./11 Dad jokes/index.html">Dad jokes</a>
+                <a href="./11 Dad jokes/Dad.html">Dad jokes</a>
                 <img src="./img/11.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./12 Sound board/index.html">Sound board</a>
+                <a href="./12 Sound board/Sound.html">Sound board</a>
                 <img src="./img/12.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./13 live user filter/index.html">Live user filter</a>
+                <a href="./13 live user filter/Live.html">Live user filter</a>
                 <img src="./img/13.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./14 button ripple effect/index.html">Button ripple fiilter</a>
+                <a href="./14 button ripple effect/Button.html">Button ripple fiilter</a>
                 <img src="./img/14.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./15 background slider/index.html">Background slider</a>
+                <a href="./15 background slider/Background.html">Background slider</a>
                 <img src="./img/15.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./16 kinetic loader/index.html">Kinetic loader</a>
+                <a href="./16 kinetic loader/Kinetic.html">Kinetic loader</a>
                 <img src="./img/16.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./17 netflix navigation/index.html">Netflix navigation</a>
+                <a href="./17 netflix navigation/Netflix.html">Netflix navigation</a>
                 <img src="./img/17.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./18 testimonial box switcher/index.html">Textimonial box swithcer</a>
+                <a href="./18 testimonial box switcher/Testimonial.html">Textimonial box swithcer</a>
                 <img src="./img/18.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./19 pokedex/index.html">Pokedex</a>
+                <a href="./19 pokedex/Pokedex.html">Pokedex</a>
                 <img src="./img/19.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./20 doble click heart/index.html">Double click heart</a>
+                <a href="./20 doble click heart/Double.html">Double click heart</a>
                 <img src="./img/20.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./21 event keycodes/index.html">Event keycodes</a>
+                <a href="./21 event keycodes/Event.html">Event keycodes</a>
                 <img src="./img/21.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./22 mobile nav navigation/index.html">Mobile nav navigation</a>
+                <a href="./22 mobile nav navigation/Mobile.html">Mobile nav navigation</a>
                 <img src="./img/22.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./23 Drink Water/index.html">Drink water</a>
+                <a href="./23 Drink Water/Drink.html">Drink water</a>
                 <img src="./img/23.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./24 Feedback UI Design/index.html">Feedback UI Design</a>
+                <a href="./24 Feedback UI Design/Feedback.html">Feedback UI Design</a>
                 <img src="./img/24.png" alt="" />
             </div>
 
             <div class="Challenge">
-                <a href="./25 Github Profile/index.html">Github profile</a>
+                <a href="./25 Github Profile/Github.html">Github profile</a>
                 <img src="./img/25.png" alt="" />
             </div>
             
