--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <!-- Search container -->
         <section class="SearchContainer">
-                <p class="title">Buscador de retos</p>
-                <input type="text" id="filter" placeholder="nombre del reto">
+                <p class="searchTitle">Buscador de retos</p>
+                <input type="text" id="filter" placeholder="">
         </section>
 
         <!-- Calling all the challenges -->
